infras.yml
Parameters:
    EnvironmentBuild:
        Description: This is used as a tag for this account
        Type: String

    VpcCIDR:
        Description: This is the VPC ip network for the underlining Infrastructure
        Type: String
        Default: 10.0.0.0/16

    PublicSubnet1CIDR:
        Description: This is the public Subnet1 cidr notation
        Type: String
        Default: 10.0.0.0/24

    PublicSubnet2CIDR:
        Description: This is the public Subnet2 cidr notation
        Type: String
        Default: 10.0.1.0/24

    PrivateSubnet1CIDR:
        Description: This is the private Subnet1 cidr notation
        Type: String
        Default: 10.0.2.0/24

    PrivateSubnet2CIDR:
        Description: This is the private Subnet2 cidr notation
        Type: String
        Default: 10.0.3.0/24

Resources:
    VPC:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: !Ref VpcCIDR
            Tags:
                - Key: name
                  Value: !Ref EnvironmentBuild

    InternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
                - Key: name
                  Value: !Ref EnvironmentBuild

    InternetGatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            InternetGatewayId: !Ref InternetGateway
            VpcId: !Ref VPC

    PublicSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 0, !GetAZs '' ]
            CidrBlock: !Ref PublicSubnet1CIDR
            MapPublicIpOnLaunch: true
            Tags:
                - Key: name
                  Value: !Sub ${EnvironmentBuild} Public Subnet (AZ1)

    PublicSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 1, !GetAZs '' ]
            CidrBlock: !Ref PublicSubnet2CIDR
            MapPublicIpOnLaunch: true
            Tags:
                - Key: name
                  Value: !Sub ${EnvironmentBuild} Public Subnet (AZ2)

    PrivateSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 0, !GetAZs '' ]
            CidrBlock: !Ref PrivateSubnet1CIDR
            MapPublicIpOnLaunch: false
            Tags:
                - Key: name
                  Value: !Sub ${EnvironmentBuild} Private Subnet (AZ1)

    PrivateSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [ 1, !GetAZs '' ]
            CidrBlock: !Ref PrivateSubnet2CIDR
            MapPublicIpOnLaunch: false
            Tags:
                - Key: name
                  Value: !Sub ${EnvironmentBuild} Private Subnet (AZ2)

    NatGateway1EIP:
        Type: AWS::EC2::EIP
        DependsOn:  InternetGatewayAttachment
        Properties:
            Domain: vpc

    NatGateway2EIP:
        Type: AWS::EC2::EIP
        DependsOn: InternetGatewayAttachment
        Properties:
            Domain: vpc

    NatGateway1:
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt NatGateway1EIP.AllocationId
            SubnetId: !Ref PublicSubnet1

    NatGateway2:
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt NatGateway2EIP.AllocationId
            SubnetId: !Ref PublicSubnet2

    PublicRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
                - Key: name
                  Value: !Sub ${EnvironmentBuild} Public Route

    DefaultPublicRoute:
        Type: AWS::EC2::Route
        DependsOn: InternetGatewayAttachment
        Properties:
            RouteTableId: !Ref PublicRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway

    PublicSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet1

    PublicSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet2

    PrivateRouteTable1:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
                - Key: name
                  Value: !Sub ${EnvironmentBuild} Private Route Table1

    DefaultPrivateRoute1:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateRouteTable1
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway1

    PrivateSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivateRouteTable1
            SubnetId: !Ref PrivateSubnet1


    PrivateRouteTable2:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
                - Key: name
                  Value: !Sub ${EnvironmentBuild} Private Route Table2

    DefaultPrivateRoute2:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateRouteTable2
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway2

    PrivateSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivateRouteTable2
            SubnetId: !Ref PrivateSubnet2

Outputs:
    VPC:
        Description: A reference to the created VPC
        Value: !Ref VPC
        Export:
            Name: !Sub ${EnvironmentBuild}-VPCID

    PublicRouteTable:
        Description: A reference for the PublicRoute Table
        Value: !Ref PublicRouteTable
        Export:
            Name: !Sub ${EnvironmentBuild}-PRT

    DefaultPublicRoute:
        Description: A reference for the Default Public Route
        Value: !Ref DefaultPublicRoute
        Export:
            Name: !Sub ${EnvironmentBuild}-DPR

    PublicSubnet1RouteTableAssociation:
        Description: A reference for the Public Subnet 1 Association
        Value: !Ref PublicSubnet1RouteTableAssociation
        Export:
            Name: !Sub ${EnvironmentBuild}-PS1A

    PublicSubnet2RouteTableAssociation:
        Description: A reference for the Public Subnet 2 Association
        Value: !Ref PublicSubnet2RouteTableAssociation
        Export:
            Name: !Sub ${EnvironmentBuild}-PS2A

    PublicSubnets:
        Description: A list for the public Subnets
        Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]
        Export:
          Name: !Sub ${EnvironmentBuild}-PUB-NETS

    PrivateRouteTable1:
        Description: A reference for the private route table
        Value: !Ref PrivateRouteTable1
        Export:
            Name: !Sub ${EnvironmentBuild}-Private-RTx 

    PrivateRouteTable2:
        Description: A reference for the private route table
        Value: !Ref PrivateRouteTable2
        Export:
            Name: !Sub ${EnvironmentBuild}-Private-RT

    DefaultPrivateRoute1:
        Description: A reference for the default private route 1
        Value: !Ref DefaultPrivateRoute1
        Export:
            Name: !Sub ${EnvironmentBuild}-DefaultPrivateRoute1

    DefaultPrivateRoute2:
        Description: A reference for the default private route 2
        Value: !Ref DefaultPrivateRoute2
        Export:
            Name: !Sub ${EnvironmentBuild}-Default-private-route2

    PrivateSubnet1RouteTableAssociation:
        Description: A reference for the private subnet1 Association
        Value: !Ref PrivateSubnet1RouteTableAssociation
        Export:
            Name: !Sub ${EnvironmentBuild}-Private-Subnet1-Association

    PrivateSubnet2RouteTableAssociation:
        Description: A reference for the private subnet2 Association
        Value: !Ref PrivateSubnet2RouteTableAssociation
        Export:
            Name: !Sub ${EnvironmentBuild}-Private-Subnet2-Association

    PrivateSubnets:
        Description: A reference for the private Subnets
        Value: !Join [ ',', [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]
        Export:
            Name: !Sub ${EnvironmentBuild}-Private-Subnets
